# ACORN

./: .gitignore  README.md  env.yml  index.html  pyproject.toml
css/: style.css
docs/: app_data.md
js/: UI.js  dataHandling.js  script.js
src/: acorn.py  main.py
src/acorn/: __init__.py  acorn.py
src/utils/: make_dataset.py
